<resources>
    <string name="app_name">Penggajian</string>
    <string name="login_retail">Login</string>
    <string name="signgup_retail">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Confirm password</string>
    <string name="forget_password">Forget Password!</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male_gender">Male</string>
    <string name="famale_gender">Famale</string>
    <string name="your_age">Select your age</string>
    <string name="press_exit">Press back again to exit</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty_field">Field cannot be empty</string>
    <string name="username_to_large">Username is too large!</string>
    <string name="username_no_white_spaces">No white spaces are allowed!</string>
    <string name="email_validate">Invalid email!</string>
    <string name="password_validate">The password must have 1 or more numbers ex:(yourpassword12)</string>
    <string name="code">Code</string>
    <string name="verif_code">Verification</string>
    <string name="description_otp_email">Code verification has been sent to your email</string>
    <string name="sign_now">Sign now</string>
    <string name="send_sms">Send code to sms</string>
    <string name="select_gender">Please select your gender</string>
    <string name="select_age">You are not eligible to apply</string>
    <string name="verify_code_otp">Verify code</string>
    <string name="description_otp_phone">Code verification has been sent to your phone number</string>
    <string name="change_number">Change number?</string>
    <string name="must_same">Passwords must be the same!</string>
    <string name="six_password">password must be more than 6</string>
    <string name="pdam">PDAM</string>
    <string name="unknown_data">Data is not registered</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashbord</string>
    <string name="menu_pegawai">Data Pegawai</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="exit_message">Are you sure want to logout?</string>
    <string name="exit">Exit</string>
    <string name="yes_confirm">yes</string>
    <string name="no_confirm">No</string>
    <string name="add_pegawai">Add data pegawai</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="golongan">Golongan</string>
    <string name="tggl_lahir">Tanggal Lahir</string>
    <string name="tgl_pensiun">Tanggal Pensiun</string>
    <string name="jabatan">Jabatan</string>
    <string name="divisi">Divisi</string>
    <string name="nohp">No Handphone</string>
    <string name="add_data">Tambah data</string>
    <string name="data_pegawai">Data Pegawai</string>
    <string name="gaji_pegawai">Gaji Pegawai</string>
    <string name="add_pegawai_message">Are you sure want to add new data pegawai?</string>
    <string name="add_pegawai_success">Data berhasil ditambahkan...!</string>
    <string name="failed_data_upload">Gagal upload data!!</string>
    <string name="nik">NIK</string>
    <string name="search_filter">Search</string>
    <string name="cari_pegawai">Cari nama pegawai</string>
    <string name="delete_pegawai">Delete Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_divisi_bagian">Cari Divisi</string>
    <string name="update_divisi">Update Data Divisi</string>
    <string name="edit_divisi">Edit Bagian Divisi</string>
    <string name="tambah_divisi">Tambah Divisi</string>
    <string name="alamat">Alamat</string>
    <string name="search_jabatan">Cari data jabatan</string>
    <string name="tunjangan_jabatan">Tunjangan Jabatan</string>
    <string name="tambah_jabatan">Tambah Jabatan</string>
    <string name="update_jabatan">Edit Jabatan</string>
    <string name="tunjangan">Tunjangan</string>
    <string name="update_gaji">Update Gaji</string>
    <string name="gaji_pokok">Gaji Pokok</string>
    <string name="total_gaji">Total Gaji</string>
    <string name="tunjangan_keluarga">Tunjangan Keluarga</string>
    <string name="jumlah_kotor">Jumlah Kotor</string>
    <string name="print_gaji">Print Gaji</string>
    <string name="enable_network">Please connect to the internet to proceed further!</string>
    <string name="permission_denied">Permission Denied...!</string>
</resources>