<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.kp.penggajian.ui.dashboard.DashbordFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_pegawai"
        android:name="com.kp.penggajian.ui.pegawai.PegawaiFragment"
        android:label="@string/menu_pegawai"
        tools:layout="@layout/fragment_pegawai" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.kp.penggajian.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>