<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.SignupActivity2"
    android:padding="30dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:text="@string/signgup_retail"
            android:textSize="36sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/muli_black"/>

            <RadioGroup
                android:id="@+id/radio_groub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/famale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/male_gender"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/muli_black"/>

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/famale_gender"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli_black" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_age"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/muli_black"/>

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:theme="@style/MyDatePicker"/>

            <Button
                android:id="@+id/next2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="@string/next"
                android:background="@drawable/button_bg"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/login_retail"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>