<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:title="Main">
            <menu>
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_dashboard" />
            </menu>
        </item>
        <item android:title="Data">
            <menu>
        <item
            android:id="@+id/nav_pegawai"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/data_pegawai" />
        <item
            android:id="@+id/nav_gaji"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/gaji_pegawai" />
            </menu>
        </item>
        <item android:title="Inputan">
            <menu>
                <item
                    android:id="@+id/nav_bagian"
                    android:title="Bagian"
                    android:icon="@drawable/ic_baseline_group_add_24" />
                <item
                    android:id="@+id/nav_jabatan"
                    android:title="Jabatan"
                    android:icon="@drawable/ic_baseline_assignment_24"/>
            </menu>
        </item>

    </group>
</menu>