<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.SmsVerifyOTP"
    android:padding="30dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textSize="100dp"
            android:fontFamily="@font/muli_black"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verif_code"
            android:textSize="24sp"
            android:fontFamily="@font/muli_black"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/description_otp_phone"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/getour_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"/>

        <com.chaos.view.PinView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:itemCount="5"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_marginTop="30dp"
            app:lineColor="@color/black"
            android:itemBackground="@color/white"
            app:itemRadius="5dp"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_bg"
            android:text="@string/sign_now"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/change_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/change_number"
            android:background="@android:color/transparent"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>