<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignUp.RetailerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/water_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="240dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="36sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_retail"
                android:background="@drawable/button_bg"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/signup_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:text="@string/signgup_retail"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>